updated doc links to remove ".html" per new docusaurus style

--- a/demos/browser/index.html
+++ b/demos/browser/index.html
@@ -113,7 +113,7 @@
 				<button type="button" class="btn btn-outline-primary mx-2 my-2 my-sm-0" onClick="window.open('https://github.com/gitbrent/PptxGenJS')">
 					GitHub Project
 				</button>
-				<button type="button" class="btn btn-outline-primary mx-2 my-2 my-sm-0" onClick="window.open('https://gitbrent.github.io/PptxGenJS/docs/installation.html')">
+				<button type="button" class="btn btn-outline-primary mx-2 my-2 my-sm-0" onClick="window.open('https://gitbrent.github.io/PptxGenJS/docs/installation')">
 					API Documentation
 				</button>
 			</form>
@@ -197,7 +197,7 @@
 				<h4 class="text-primary">HTML to PowerPoint</h4>
 				<p>
 					Reproduces an HTML table into 1 or more slides (auto-paging) using the syntax <code class="language-javascript p-1">pptx.tableToSlides('tableId');</code><br>
-					View the <a href="https://gitbrent.github.io/PptxGenJS/docs/html-to-powerpoint.html" target="_blank">HTML to PowerPoint documentation</a> for full details and
+					View the <a href="https://gitbrent.github.io/PptxGenJS/docs/html-to-powerpoint" target="_blank">HTML to PowerPoint documentation</a> for full details and
 					examples
 				</p>
 				<h5 class="mt-4 text-primary bde-arrow-cont" onclick="$(this).next('div').toggle('slow'); $(this).find('.arrow').toggleClass('active');" title="Click to Show/Hide">
@@ -550,7 +550,7 @@
 			<div class="tab-pane shadow p-4" id="charts" role="tabpanel" aria-labelledby="charts-tab">
 				<h4 class="text-primary">Chart Demos</h4>
 				<p>
-					View the <a href="https://gitbrent.github.io/PptxGenJS/docs/api-charts.html" target="_blank">chart documentation</a> for full details and examples
+					View the <a href="https://gitbrent.github.io/PptxGenJS/docs/api-charts" target="_blank">chart documentation</a> for full details and examples
 				</p>
 				<div class="d-flex flex-wrap mb-1">
 					<div class="card mr-4 mb-4 flex-grow-1">
@@ -635,7 +635,7 @@
 			<div class="tab-pane shadow p-4" id="images" role="tabpanel" aria-labelledby="images-tab">
 				<h4 class="text-primary">Image Demos</h4>
 				<p>
-					View the <a href="https://gitbrent.github.io/PptxGenJS/docs/api-images.html" target="_blank">image documentation</a> for full details and examples
+					View the <a href="https://gitbrent.github.io/PptxGenJS/docs/api-images" target="_blank">image documentation</a> for full details and examples
 				</p>
 				<div class="card-deck mb-4">
 					<div class="card">
@@ -683,7 +683,7 @@
 				</div>
 				<h4 class="text-primary mt-4">Media Demos</h4>
 				<p>
-					View the <a href="https://gitbrent.github.io/PptxGenJS/docs/api-media.html" target="_blank">media documentation</a> for full details and examples
+					View the <a href="https://gitbrent.github.io/PptxGenJS/docs/api-media" target="_blank">media documentation</a> for full details and examples
 				</p>
 				<div class="card-deck mb-4">
 					<div class="card">
@@ -716,7 +716,7 @@
 			<div class="tab-pane shadow p-4" id="shapes" role="tabpanel" aria-labelledby="shapes-tab">
 				<h4 class="text-primary">Shape Demos</h4>
 				<p>
-					View the <a href="https://gitbrent.github.io/PptxGenJS/docs/api-shapes.html" target="_blank">shape documentation</a> for full details and examples
+					View the <a href="https://gitbrent.github.io/PptxGenJS/docs/api-shapes" target="_blank">shape documentation</a> for full details and examples
 				</p>
 				<div class="card-deck mb-4">
 					<div class="card">
@@ -745,7 +745,7 @@
 				</div>
 				<h4 class="text-primary mt-4">Text Demos</h4>
 				<p>
-					View the <a href="https://gitbrent.github.io/PptxGenJS/docs/api-text.html" target="_blank">text documentation</a> for full details and examples
+					View the <a href="https://gitbrent.github.io/PptxGenJS/docs/api-text" target="_blank">text documentation</a> for full details and examples
 				</p>
 				<div class="d-flex flex-wrap mb-4">
 					<div class="card mr-4 mb-4 flex-grow-1">
@@ -809,7 +809,7 @@
 			<div class="tab-pane shadow p-4" id="tables" role="tabpanel" aria-labelledby="tables-tab">
 				<h4 class="text-primary">Table Demos</h4>
 				<p>
-					View the <a href="https://gitbrent.github.io/PptxGenJS/docs/api-table.html" target="_blank">table documentation</a> for full details and examples
+					View the <a href="https://gitbrent.github.io/PptxGenJS/docs/api-table" target="_blank">table documentation</a> for full details and examples
 				</p>
 				<div class="card-deck mb-4">
 					<div class="card">
@@ -860,7 +860,7 @@
 			<div class="tab-pane shadow p-4" id="templates" role="tabpanel" aria-labelledby="templates-tab">
 				<h4 class="text-primary">Slide Masters / Templates / Layouts</h4>
 				<p>
-					View the <a href="https://gitbrent.github.io/PptxGenJS/docs/masters.html" target="_blank">masters documentation</a> for full details and examples
+					View the <a href="https://gitbrent.github.io/PptxGenJS/docs/masters" target="_blank">masters documentation</a> for full details and examples
 				</p>
 				<div class="card-deck mb-4">
 					<div class="card" style="max-width:18%">
